--- a/index.html
+++ b/index.html
@@ -185,11 +185,15 @@
             const rhDayOut = day.main.humidity;
 
             // ==========================================
-            // КОРРЕКЦИЯ ПАРНИКОВОГО ЭФФЕКТА (ФИКСИРОВАННАЯ)
-            // ==========================================
-            const tDayIn = tDayOut + 25; // Ровно +25 градусов
-            const rhDayIn = Math.max(5, rhDayOut - 10); // Ровно -10 процентных пунктов
+// КОРРЕКЦИЯ ПАРНИКОВОГО ЭФФЕКТА (ОПТИМИЗИРОВАННАЯ)
+// ==========================================
+// 1. Температура: внутри качественного бокса под солнцем 
+// температура легко поднимается на 45-50 градусов выше уличной.
+const tDayIn = tDayOut + 45; 
 
+// 2. Влажность: при таком нагреве относительная влажность внутри 
+// падает очень сильно. Минус 40-50 пунктов — это реально.
+const rhDayIn = Math.max(5, rhDayOut - 45);
             // ФОРМУЛЫ
             const pSatNight = 6.1094 * Math.exp((17.625 * tNight) / (tNight + 243.04));
             const pSatDay = 6.1094 * Math.exp((17.625 * tDayIn) / (tDayIn + 243.04));
